--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,7 @@ script:
     - pip install -r requirements.txt
     - pip install codecov
     - cd test
-    - python -m unittest discover -v --pattern=*.py
+    - coverage run -m unittest discover -v --pattern=*.py
     - cd ..
 
 after_success:
